--- a/Лаб4_Федькина_ПОО_1курс.md
+++ b/Лаб4_Федькина_ПОО_1курс.md
@@ -819,4 +819,70 @@ int main() {
 
 ##  Задача 7: Кэширование вычислений
 ### Постановка задачи
+### Математическая модель
+Отсутсвует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|cache|Cache*|Указатель на структуру кэша для поиска/добавления значений в функции|
+|n|Cache*|Входной аргумент - число для вычисления Фибоначчи в фуекциях|
+### Код программы
+``` c
+#include <stdio.h>
+#include <stdlib.h>
+
+typedef struct {
+    int n;      // аргумент функции
+    long long value; // вычисленное значение Фибоначчи для n
+} CacheEntry;
+
+typedef struct {
+    CacheEntry* entries; // динамический массив кэша
+    size_t size;         // текущий размер массива (количество элементов)
+} Cache;
+
+// Функция для поиска значения в кэше, возвращает указатель на значение или NULL
+long long* cache_find(Cache* cache, int n) {
+    for (size_t i = 0; i < cache->size; i++) {
+        if (cache->entries[i].n == n)
+            return &cache->entries[i].value;
+    }
+    return NULL;
+}
+
+// Добавление новой записи в кэш
+void cache_add(Cache* cache, int n, long long value) {
+    cache->entries = realloc(cache->entries, (cache->size + 1) * sizeof(CacheEntry));
+    cache->entries[cache->size].n = n;
+    cache->entries[cache->size].value = value;
+    cache->size++;
+}
+
+// Рекурсивная функция 
+long long fib(int n, Cache* cache) {
+    if (n <= 1) return n;
+
+    // Проверяем в кэше
+    long long* cached_value = cache_find(cache, n);
+    if (cached_value != NULL) {
+        return *cached_value;
+    }
+
+    // Вычисляем и сохраняем в кэш
+    long long result = fib(n - 1, cache) + fib(n - 2, cache);
+    cache_add(cache, n, result);
+    return result;
+}
+
+int main() {
+    Cache cache = {NULL, 0};
+
+    int n = 40;
+    printf("Fib(%d) = %lld\n", n, fib(n, &cache));
+
+    // Очистка памяти
+    free(cache.entries);
+    return 0;
+}
+```
 
