--- a/Лаб4_Федькина_ПОО_1курс.md
+++ b/Лаб4_Федькина_ПОО_1курс.md
@@ -825,7 +825,10 @@ int main() {
 |Имя|Тип|Смысл|
 |---|---|-----|
 |cache|Cache*|Указатель на структуру кэша для поиска/добавления значений в функции|
-|n|Cache*|Входной аргумент - число для вычисления Фибоначчи в фуекциях|
+|n|Cache*|Входной аргумент - число для вычисления Фибоначчи в фуyкциях|
+|value|long long|Вычисленное значение числа Фибоначчи для аргумента n|
+|n|Cache*|Входной аргумент - число для вычисления Фибоначчи в функциях|
+
 ### Код программы
 ``` c
 #include <stdio.h>
