--- a/Лаб4_Федькина_ПОО_1курс.md
+++ b/Лаб4_Федькина_ПОО_1курс.md
@@ -819,15 +819,23 @@ int main() {
 
 ##  Задача 7: Кэширование вычислений
 ### Постановка задачи
+ • Реализовать функцию для вычисления чисел Фибоначчи с использованием memoization.
+ • Параметры: целочисленное значение.
+ • Возвращать результат вычислений.
+ • Реализовать кэш как динамический массив структур
 ### Математическая модель
 Отсутсвует
 ### Список идентификаторов
 |Имя|Тип|Смысл|
 |---|---|-----|
 |cache|Cache*|Указатель на структуру кэша для поиска/добавления значений в функции|
-|n|Cache*|Входной аргумент - число для вычисления Фибоначчи в фуyкциях|
+|n|int|Входной аргумент - число для вычисления Фибоначчи в функциях|
 |value|long long|Вычисленное значение числа Фибоначчи для аргумента n|
-|n|Cache*|Входной аргумент - число для вычисления Фибоначчи в функциях|
+|entries|CacheEntry*|указатель на динамический массив записей кэша|
+|size|size_t|текущее количество элементов в массиве entries|
+|cache|Cache|экземпляр структуры кэша для хранения промежуточных результатов|
+|cached_value |long long*|указатель на найденное значение в кэше|
+|result|long long|результат вычисления числа Фибоначчи|
 
 ### Код программы
 ``` c
@@ -888,4 +896,113 @@ int main() {
     return 0;
 }
 ```
+### Результат
+
+<img width="305" height="78" alt="Снимок экрана 2025-11-12 182008" src="https://github.com/user-attachments/assets/62015b22-d0f8-4470-bab2-1e7df434a636" />
+
+##  Задача 8: Преобразование текста
+### Постановка задачи:
+ • Написать функции для подсчёта частоты символов в тексте и их сортировки по убыванию частоты.
+ • Параметры: строка текста.
+ • Возвращать массив структур, содержащий символы и их частоту.
+ • Использовать GSL для построения гистограммы распределения частот.
+ ### Математическая модель
+ Отсутствует
+ ### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|counts|int[256]|массив для подсчета частот всех ASCII символов|
+|length|int|длина входного текста|
+|ch|unsigned char|текущий символ текста (для индексации массива)|
+|unique_count|int|количество уникальных символов в тексте|
+|result|SymbolFreq*|указатель на массив структур с результатами|
+|idx|int|индекс для заполнения массива результатов|
+|i |int|счетчик циклов|
+|sf1|SymbolFreq*|указатель на первую структуру для сравнения|
+|sf2|SymbolFreq*|указатель на вторую структуру для сравнения|
+|text|const char*|входной текст для анализа|
+|size|int|количество уникальных символов (выходной параметр)|
+|freq1 |SymbolFreq*|указатель на массив структур с частотами символов|
+|out_size|int*|указатель для возврата количества уникальных символов|
+|a|const void*|указатель на первый элемент для сравнения|
+|b|const void*|указатель на второй элемент для сравнения|
+
+ ### Код программы
+ ```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+typedef struct{
+    char symbol;
+    int freq;
+} SymbolFreq;
+//Функция подсчета частот символов
+SymbolFreq* count_freq(const char* text, int* out_size)
+{
+    int counts[256]={0};
+    int length=(int)strlen(text);
+
+    //Подсчёт частоты каждого символа (ASCII)
+    for(int i=0; i<length;i++)
+    {
+        unsigned char ch=(unsigned char)text[i];
+        counts[ch]++;
+    }
+
+    //Подсчёт кол-ва уникальных символов
+    int unique_count=0;
+    for(int i=0; i<256;i++)
+    {
+        if (counts[i]>0)
+        {
+            unique_count++;
+        }
+    }
+
+    //Выделение массива структур под результат
+    SymbolFreq* result=(SymbolFreq*)malloc(unique_count*sizeof(SymbolFreq));
+    int idx=0;
+    for(int i=0;i<256;i++)
+    {
+        if (counts[i]>0){
+            result[idx].symbol=(char)i;
+            result[idx].freq=counts[i];
+            idx++;
+        }
+    }
+    *out_size=unique_count;
+    return result;
+}
+
+//Функция для сортировки по убыванию частоты (qsort)
+int cmp_desc(const void* a,const void* b)
+{
+    SymbolFreq* sf1=(SymbolFreq*)a;
+    SymbolFreq* sf2=(SymbolFreq*)b;
+    return sf2->freq - sf1->freq;
+}
+int main(void)
+{
+    const char* text="Example of the text is an importent thing in programming. ";
+
+    int size=0;
+    SymbolFreq* freq1=count_freq(text,&size);
+
+    qsort(freq1,size,sizeof(SymbolFreq), cmp_desc);
+
+    //Вывод отсортированного массива символов с частотой
+    printf("Символы и их частоты в тексте (от большего к меньшему):\n");
+    for (int i=0;i<size;i++)
+    {
+        printf("'%c' : %d\n",freq1[i].symbol,freq1[i].freq);
+    }
+    return 0;
+}
+
+```
+ ### Результат
+ 
+ <img width="502" height="448" alt="71" src="https://github.com/user-attachments/assets/5cd1182a-ae7d-49fa-b261-1b74e7566885" />
+
 
