--- a/Лаб4_Федькина_ПОО_1курс.md
+++ b/Лаб4_Федькина_ПОО_1курс.md
@@ -1005,4 +1005,118 @@ int main(void)
  
  <img width="502" height="448" alt="71" src="https://github.com/user-attachments/assets/5cd1182a-ae7d-49fa-b261-1b74e7566885" />
 
+## Задача 9: Упаковка и распаковка данных
+### Постановка задачи
+• Реализовать функции для упаковки данных (массива структур) в бинарный формат и их последующей распа
+ковки.
+ • Параметры: массив структур, указатель на файл.
+ • Возвращать массив структур, считанный из файла.
+ • Использовать стандартную библиотеку C для работы с файлами.
+ ### Математическая модель
+ Отсутствует
+ ### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|arr_write|Data[3]|Массив структур для записи в файл|
+|arr_read|Data*|Указатель на массив структур, прочитанных из файла|
+|count|size_t|Количество структур в массиве|
+|fp|FILE*|Указатель на файловый поток|
+|i|size_t|Счетчик цикла для итерации по массиву|
+|out_count|size_t*|Указатель для возврата количества прочитанных структур|
 
+ ### Код программы
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+//Пример структуры
+typedef struct{
+    int id;
+    float value;
+    char name[50];
+} Data;
+
+//Функция упаковки массива структур в бинарный файл.
+int pack_data(const Data *arr,size_t count, FILE *fp)
+{
+    if (!fp||!arr) return -1;
+
+    //Записываем количество структур
+    if (fwrite(&count,sizeof(size_t),1,fp)!=1)
+        return -1;
+    //Записываем сами структуры
+    if(fwrite(arr,sizeof(Data),count,fp)!=count)
+        return -1;
+    return 0;//успех
+}
+
+//Функция распаковки массива структур из бинарного файла.
+Data *unpack_data(FILE *fp,size_t *out_count){
+    if (!fp||!out_count) return NULL;
+
+    //Читаем кол-во структур
+    if (fread(out_count,sizeof(size_t),1,fp)!=1)
+        return NULL;
+    Data *arr=malloc(*out_count * sizeof(Data));
+    if (!arr) return NULL;
+
+    //Читаем данные
+    if (fread(arr,sizeof(Data),*out_count,fp)!=*out_count)
+    {
+        free(arr);
+        return NULL;
+    }
+    return arr;
+}
+int main (void)
+{
+    Data arr_write[3]={
+        {1,10.5f,"Alpha"},
+        {2,20.0f,"Beta"},
+        {3,30.25f,"Gamma"}
+    };
+    FILE *fp=fopen("data.bin","wb");
+    if(!fp)
+    {
+        perror("Ошибка открытия файла для записи");
+        fclose(fp);
+        return 1;
+    }
+    if (pack_data(arr_write,3,fp)!=0)
+    {
+        fprintf(stderr,"Ошибка записи данных\n");
+        fclose(fp);
+        return 1;
+    }
+    fclose(fp);
+
+    //Читаем обратно
+    fp=fopen("data.bin","rb");
+    if(!fp){
+        perror("Ошибка открытия файла для чтения");
+        return 1;
+    }
+
+    size_t count=0;
+    Data *arr_read=unpack_data(fp,&count);
+    fclose(fp);
+    if (!arr_read)
+    {
+        fprintf(stderr,"Ошибка при чтении данных\n");
+        return 1;
+    }
+    //Выводим прочитанные данные
+    for (size_t i=0;i<count;i++)
+    {
+        printf("id=%d,value=%.2f, name=%s\n",arr_read[i].id,arr_read[i].value,arr_read[i].name);
+    }
+    free (arr_read);
+    return 0;
+}
+```
+ ### Результат
+ 
+ <img width="341" height="117" alt="10" src="https://github.com/user-attachments/assets/985ee6d4-ffda-4d62-afa9-fab6cb70f709" />
+### Информация о студенте
+Федькина Полина Дмитриевна. ПОО 1 курс Программирование.
