--- a/rust/Лаб2_Федькина_1курс_ПОО.md
+++ b/rust/Лаб2_Федькина_1курс_ПОО.md
@@ -273,3 +273,71 @@ fn main() {
 
 <img width="451" height="97" alt="4" src="https://github.com/user-attachments/assets/c42a0e70-7ef2-4a87-a461-a34791b8758d" />
 
+## Задача №5
+### Постановка задачи:
+Напишите функцию sum_collection, которая принимает коллекцию элементов типа T и
+ возвращает их сумму. Ограничьте тип T требованием наличия метода addition() в некото
+ ром трейте Addable для поддержки суммирования. Просуммируйте затем любую коллекцию
+ структур вида:
+ struct Number {
+ value: u32,
+ }
+### Математическая модель
+Отсутствует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|other||параметр метода addition, второй операнд сложения|
+|collection||параметр функции, срез коллекции элементов|
+|self||параметр методов, ссылка на текущий объект|
+|sum||переменная для накопления суммы в функции sum_collection|
+|item||переменная итератора в цикле for|
+|numbers||переменная вектора чисел в функции main|
+|result||переменная для хранения результата суммирования|
+
+### Код программы
+```c
+trait Addable {
+    fn addition(&self, other: &Self) -> Self;
+}
+#[derive(Clone)]
+struct Number {
+    value: u32,
+}
+
+impl Addable for Number {
+    fn addition(&self, other: &Self) -> Self {
+        Number { value: self.value + other.value }
+    }
+}
+
+fn sum_collection<T: Addable + Clone>(collection: &[T]) -> Option<T> {
+    if collection.is_empty() {
+        return None;
+    }
+    let mut sum = collection[0].clone();
+    for item in &collection[1..] {
+        sum = sum.addition(item);
+    }
+    Some(sum)
+}
+
+fn main() {
+    let numbers = vec![
+        Number { value: 10 },
+        Number { value: 20 },
+        Number { value: 30 },
+    ];
+
+    if let Some(result) = sum_collection(&numbers) {
+        println!("Сумма: {}", result.value);
+    } else {
+        println!("Коллекция пуста");
+    }
+}
+```
+### Результат
+
+<img width="887" height="193" alt="5" src="https://github.com/user-attachments/assets/134e75b4-8054-4782-b09c-0037d12a8878" />
+
+
