--- a/rust/Лаб2_Федькина_1курс_ПОО.md
+++ b/rust/Лаб2_Федькина_1курс_ПОО.md
@@ -340,4 +340,122 @@ fn main() {
 
 <img width="887" height="193" alt="5" src="https://github.com/user-attachments/assets/134e75b4-8054-4782-b09c-0037d12a8878" />
 
+## Задача 6
+### Постановка задачи
+Создайте обобщенную структуру Collection<T>, которая содержит вектор элементов типа
+ T. Реализуйте методы add_element(), get_element() и remove_element(), ограничив тип T
+ trait’ом Clone:
+ • https://doc.rust lang.org/std/clone/trait.Clone.html
+ • https://doc.rust lang.org/rustbyexample/trait/clone.html
+ • https://doc.rust lang.org/std/clone/index.html
+ • https://oswalt.dev/2023/12/copyandcloneinrust/
+ • https://blog.logrocket.com/disambiguatingrust traitscopyclonedynamic/
+### Математическая модель
+Отсутствует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|mut self|Ссылка mut|параметр, изменяемая ссылка на экземпляр структуры|
+|self|Ссылка||параметр, неизменяемая ссылка на экземпляр структуры|
+|element||параметр, элемент для добавления в коллекцию|
+|index||параметр, индекс элемента коллекции|
+|collection|struct Collection|переменная, экземпляр структуры Collection|
+|self||ключевое слово, ссылка на текущий экземпляр структуры|
 
+### Код программы
+```c
+#[derive(Debug)]
+struct Collection<T: Clone> {
+    elements: Vec<T>,
+}
+
+impl<T: Clone> Collection<T> {
+    fn new() -> Self {
+        Collection {
+            elements: Vec::new(),
+        }
+    }
+
+    fn add_element(&mut self, element: T) {
+        self.elements.push(element);
+    }
+
+    fn get_element(&self, index: usize) -> Option<T> {
+        self.elements.get(index).cloned()
+    }
+
+    fn remove_element(&mut self, index: usize) -> Option<T> {
+        if index < self.elements.len() {
+            Some(self.elements.remove(index))
+        } else {
+            None
+        }
+    }
+}
+
+fn main() {
+    let mut collection = Collection::new();
+
+    collection.add_element(10);
+    collection.add_element(20);
+    collection.add_element(30);
+
+    println!("Element at index 1: {:?}", collection.get_element(1));
+    println!("Removed element at index 0: {:?}", collection.remove_element(0));
+    println!("Collection after removal: {:?}", collection.elements);
+}
+```
+### Результаты
+
+<img width="452" height="122" alt="6" src="https://github.com/user-attachments/assets/7af3f000-d242-4177-999f-1b1f8909a8cf" />
+
+## Задача №7
+### Постановка задачи
+Создайте трейт Summable, который требует реализации метода sum(&self)-> u32 для типов,
+ поддерживающих сложение. Реализуйте этот трейт для структуры Pair<T>, которая содержит
+ два поля типа T (сумма чисел в этой паре). Добавьте ограничение на тип T для поддержки
+ сложения:
+ • https://doc.rust lang.org/book/ch1903advancedtraits.html
+ • https://doc.rust lang.org/std/ops/trait.Add.html
+ • https://doc.rust lang.org/std/ops/index.html
+ • https://stackoverflow.com/questions/28005134/howdoi implement theaddtrait fora
+ referencetoastruct
+ • https://doc.rust lang.org/book/ch1002traits.html#implementingatraitonatype
+ • https://doc.rust lang.org/book/appendix03derivabletraits.html
+### Математическая модель
+Отсутствует
+### Список иденитификаторов
+
+### Код программы
+```c
+use std::ops::Add;
+
+trait Summable {
+    fn sum(&self) -> u32;
+}
+
+struct Pair<T> {
+    a: T,
+    b: T,
+}
+
+impl<T> Summable for Pair<T>
+where
+    T: Add<Output = T> + Into<u32> + Copy,
+{
+    fn sum(&self) -> u32 {
+        (self.a + self.b).into()
+    }
+}
+
+fn main() {
+    let pair = Pair { a: 10u8, b: 20u8 };
+    println!("Sum: {}", pair.sum());  // Выведет Sum: 30
+}
+```
+### Результат
+
+<img width="872" height="181" alt="7" src="https://github.com/user-attachments/assets/afcaf801-54c5-48f4-b51c-9d709fb68784" />
+
+## Информация о студенте
+Федькина Полина Дмитриевна, ПОО, 1 курс.
