--- a/rust/Лаб2_Федькина_1курс_ПОО.md
+++ b/rust/Лаб2_Федькина_1курс_ПОО.md
@@ -425,6 +425,9 @@ fn main() {
 ### Математическая модель
 Отсутствует
 ### Список иденитификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|pair|struct Pair|переменная, экземпляр структуры Pair<u8>|
 
 ### Код программы
 ```c
