--- a/rust/Лаб3_Федькина_1курс_ПОО.md
+++ b/rust/Лаб3_Федькина_1курс_ПОО.md
@@ -105,3 +105,7 @@
 Ответ:  pub struct Book—публичная структура (доступна из других модулей). Если убрать pub структура перестанет быть публичной, следовательно, она перестанет
 быть доступна другим модулям, возникнет ошибка
 #### Вопрос 3:  Как работает оператор ? в функции borrow_book()? Что произойдет, если заменить его на unwrap()?
+- Оператор ? автоматически возвращает ошибку из функции, если результат Err. Это позволяет функции аккуратно завершить выполнение и сообщить вызывающему коду ошибку.
+- Метод unwrap() же неявно вызывает panic, если результат Err. То есть при возникновении ошибки программа аварийно завершит работу (паниковать), вместо того, чтобы вернуть ошибку вызывающему коду.
+- То есть такая замена приведет к небезопасному завершению программы, что не есть хорошо.
+
