--- a/rust/Лаб3_Федькина_1курс_ПОО.md
+++ b/rust/Лаб3_Федькина_1курс_ПОО.md
@@ -193,4 +193,46 @@ pub struct Book{
 ### Постановка задачи:
 Реализуйте функцию поиска книг по названию (частичное совпадение, без учета регистра)
 ### Код:
+1. В main.rs
+```
+   // Функция для нахождения книги по слову/символу
+fn find_book(library: &Library) {
+    println!("\n--- Поиск книги---");
+    print!("Введите символ/ы: ");
+    io::stdout().flush().unwrap();
+    
+    let answer = read_line().trim().to_string();
+    if answer.is_empty() {
+        println!("Ошибка: невозможно найти книгу.");
+        return;
+    }
+    
+    let ans_res = answer.to_lowercase();
+    
+    let found_books: Vec<_> = library.get_books() // обращаемся к полю с книгами
+        .iter()
+        .filter(|book| book.title.to_lowercase().contains(&ans_res))
+        .collect();
+    
+    // Вывод результатов
+    if found_books.is_empty() {
+        println!("Книги по запросу '{}' не найдены", answer);
+    } else {
+        println!("Найдено книг по запросу '{}': {}", answer, found_books.len());
+        for book in found_books {
+            println!("- {} (автор: {}, год: {})", book.title, book.author, book.year);
+        }
+    }
+}
+```
 
+2. В lib.rs - сделали поле books pub
+
+### Результат
+
+<img width="952" height="947" alt="з2" src="https://github.com/user-attachments/assets/73382fd9-e29b-4c43-8bf8-173fe3b1e226" />
+
+###  Задание 3 (средний уровень)
+### Постановка задачи:
+ Добавьте отслеживание того, какие книги выданы каждому читателю. Создайте пункт меню “Показать книги читателя”.
+ 
