--- a/rust/Лаб3_Федькина_1курс_ПОО.md
+++ b/rust/Лаб3_Федькина_1курс_ПОО.md
@@ -232,7 +232,7 @@ fn find_book(library: &Library) {
 
 <img width="952" height="947" alt="з2" src="https://github.com/user-attachments/assets/73382fd9-e29b-4c43-8bf8-173fe3b1e226" />
 
-###  Задание 3 (средний уровень)
-### Постановка задачи:
- Добавьте отслеживание того, какие книги выданы каждому читателю. Создайте пункт меню “Показать книги читателя”.
- 
+К сожалению, остальное я не придумала как решать, хотя я много чего перепробовала(
+### Информация о студенте:
+Федькина Полина Дмитриевна, ПОО, 1 курс
+
